页面优化与播放

--- a/src/renderer/src/style/animation/fade.styl
+++ b/src/renderer/src/style/animation/fade.styl
@@ -1,10 +1,10 @@
 .fade-enter-active
-  transition: all 0.3s ease-out
+  transition: all 0.3s
 .fade-leave-active
   transition all 0.5s
 .fade-enter-from,
 .fade-leave-to
-  opacity 0.3
+  opacity 0
 .fade-enter-to,
 .fade-leave-from
   opacity 1
