打包修复，数据库设置

--- a/src/renderer/src/style/global.styl
+++ b/src/renderer/src/style/global.styl
@@ -1,12 +1,12 @@
 :root
-  --cursor-pointer url('src/assets/icon/pointer.svg') 5 5,auto
-  //--cursor-noPointer url('src/assets/icon/noPointer.svg') 5 5,auto
-  --cursor-pointing url('src/assets/icon/pointing.svg') 5 5,auto
+  --cursor-pointer url('@/assets/icon/pointer.svg') 5 5,auto
+  --cursor-noPointer url('@/assets/icon/noPointer.svg') 5 5,auto
+  --cursor-pointing url('@/assets/icon/pointing.svg') 5 5,auto
 *
   user-select none
   //&::-webkit-scrollbar-track
   //  background-color transparent
-  font-family "dm", source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace
+  font-family "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif
   &::-webkit-scrollbar
     width 8px
     background-color transparent
