音乐分享服务

--- a/src/renderer/src/style/animation/fade.styl
+++ b/src/renderer/src/style/animation/fade.styl
@@ -8,3 +8,13 @@
 .fade-enter-to,
 .fade-leave-from
   opacity 1
+.fade-quick-enter-active
+  transition all 0.3s
+.fade-quick-leave-active
+  transition all 0.3s
+.fade-quick-enter-from,
+.fade-quick-leave-to
+  opacity 0
+.fade-quick-enter-to,
+.fade-quick-leave-from
+  opacity 1
