--- a/src/renderer/src/style/animation/pullDown.styl
+++ b/src/renderer/src/style/animation/pullDown.styl
@@ -10,3 +10,15 @@
 .fullDown-leave-from
   transform translateY(0)
   opacity 1
+.fullDown-quick-enter-active
+  transition all 0.6s ease-in-out
+.fullDown-quick-leave-active
+  transition all 0.5s ease-in-out
+.fullDown-quick-enter-from,
+.fullDown-quick-leave-to
+  transform translateY(-100%)
+  opacity 0.8
+.fullDown-quick-enter-to,
+.fullDown-quick-leave-from
+  transform translateY(0)
+  opacity 1
