歌词流光 歌词性能优化 歌词滚动逻辑优化 设置->colorful 歌词面板键盘事件监听优化 歌词面板字体增加

--- a/src/renderer/src/style/global.styl
+++ b/src/renderer/src/style/global.styl
@@ -1,6 +1,9 @@
 @font-face
   font-family:'pinyin'
   src url("@/assets/font/pingying.ttf")
+@font-face
+  font-family:'dongJingXiaoLangMan'
+  src url("@/assets/font/东京小浪漫.ttf")
 :root
   --cursor-pointer url('@/assets/icon/pointer.svg') 10 10,auto
   --cursor-noPointer url('@/assets/icon/noPointer.svg') 10 10,auto
@@ -22,6 +25,9 @@
   cursor var(--cursor-pointing)
 .pinYin
   font-family 'pinyin'
+  letter-spacing 2px
+.dongJingXiaoLangMan
+  font-family 'dongJingXiaoLangMan'
   letter-spacing 2px
 body
   padding 0
