--- a/src/renderer/src/style/global.styl
+++ b/src/renderer/src/style/global.styl
@@ -33,6 +33,7 @@ body
   padding 0
   margin 0
   cursor var(--cursor-pointer)
+  background-color rgba(165,222,228,.8)
   #app
     height 100vh
     width 100vw
